tests/errors/test_78.xpp
// No such global var in specified module

import "foo" as foo;

fn main() void {
	let x = foo::ghost;
}
